--- a/prueba/css/estilo.css
+++ b/prueba/css/estilo.css
@@ -28,7 +28,7 @@ header {
 
 
 #index-body {
-  background-image: url(photo/back16.jpg);
+  background-image: url(/../../photo/back16.jpg);
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
